--- a/css/agency.css
+++ b/css/agency.css
@@ -49,7 +49,7 @@ h4,
 h5,
 h6 {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
+  
   font-weight: 700;
 }
 .img-centered {
@@ -570,14 +570,14 @@ section#contact .section-heading {
   color: white;
 }
 section#contact .form-group {
-  margin-bottom: 25px;
+  margin-bottom: 5px;
 }
 section#contact .form-group input,
 section#contact .form-group textarea {
   padding: 20px;
 }
 section#contact .form-group input.form-control {
-  height: auto;
+  height: 35px;
 }
 section#contact .form-group textarea.form-control {
   height: 236px;
@@ -588,14 +588,14 @@ section#contact .form-control:focus {
 }
 section#contact ::-webkit-input-placeholder {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
+  
   font-weight: 700;
   color: #eeeeee;
 }
 section#contact :-moz-placeholder {
   /* Firefox 18- */
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
+  
   font-weight: 700;
   color: #eeeeee;
 }
@@ -613,6 +613,7 @@ section#contact :-ms-input-placeholder {
   color: #eeeeee;
 }
 section#contact .text-danger {
+  height:24px;
   color: #e74c3c;
 }
 footer {
@@ -750,4 +751,8 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #007aff;
+}
+.tx_title{
+  color: white;
+  font-weight: lighter;
 }
